# SplineEditor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format-code.sh
data/: arrows.blend  colored.frag  colored.vertex
libs/allshare/: allshare_Distributor.h  allshare_Subscriber.h
resources/: resources.qrc
scenario/: Linux.scenario  Windows.scenario
src/: CameraControl.hpp  KnotModel.hpp  Line.cpp  Line.hpp  LineView.cpp  Mark.cpp  Mark.hpp  Result.hpp  Spline.hpp  SplineMark.hpp  SplineSegment.hpp  SplineSegmentView.hpp  SplineView.hpp  knot.cpp  knot.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  polylinearea.cpp  polylinearea.h  polylineeditor.cpp  polylineeditor.h
src/Controllers/: ControllerKnot.cpp  ControllerKnot.hpp  ControllerSpline.cpp  ControllerSpline.hpp  ControllerSplineEditor.cpp  ControllerSplineEditor.hpp
src/Model/: EditorModeMachine.cpp  EditorModeMachine.hpp  KnotModel.cpp  ModelPolylineEditor.cpp  ModelPolylineEditor.h  SplineModel.cpp  SplineModel.hpp
src/Models/: EditorModeMachine.cpp  ModelKnot.cpp  ModelKnot.hpp  ModelSpline.cpp  ModelSpline.hpp  ModelSplineEditor.cpp  ModelSplineEditor.hpp
src/Utils/: utils.cpp  utils.h
src/View/: CameraControl.cpp  LineView.hpp  SplineMarkView.cpp  SplineMarkView.hpp  SplineView.hpp  ViewPolylineArea.cpp  ViewPolylineArea.h  polylinearea.h
src/View/forms/: ViewPolylineEditor.cpp  ViewPolylineEditor.h  ViewPolylineEditor.ui  mainwindow.cpp  mainwindow.ui
src/Views/: CameraControl.cpp  CameraControl.hpp  ViewKnot.cpp  ViewKnot.hpp  ViewLine.cpp  ViewLine.hpp  ViewPolylineArea.cpp  ViewPolylineArea.h  ViewSegment.cpp  ViewSegment.hpp  ViewSpline.cpp  ViewSpline.hpp  ViewSplineArea.cpp  ViewSplineArea.hpp  ViewSplineMark.cpp  ViewSplineMark.hpp  ViewSplineSegment.cpp  ViewSplineSegment.hpp
src/Views/forms/: KnotParamsWidget.cpp  KnotParamsWidget.h  KnotParamsWidget.ui  ViewEditorMode.cpp  ViewEditorMode.h  ViewEditorMode.ui  ViewSplineEditor.cpp  ViewSplineEditor.hpp  ViewSplineEditor.ui
